--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,27 @@
-# Logs
-logs
+# Dependencies
+node_modules/
+backend/node_modules/
+
+# Environment variables
+.env
+.env.local
+backend/.env
+
+# Build outputs
+dist/
+build/
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# OS
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+Thumbs.db
 
-# Local Netlify folder
-.netlify
-
-.vercel
-.env*.local
-
-# Documentation folder
-extra/
-
-# Ignore all markdown files
-*.md
-!README.md
+# Misc
+*.tsbuildinfo
+.cache/
