--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "recharts": "^3.7.0",
-    "tesseract.js": "^7.0.0"
+    "tesseract.js": "^7.0.0",
+    "twilio": "^5.12.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
