--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,19 @@
 node_modules/
 backend/node_modules/
 
-# Environment variables
+# Environment variables (CRITICAL - NEVER COMMIT)
 .env
 .env.local
+.env.production
 backend/.env
 
 # Build outputs
 dist/
 build/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # IDE
 .vscode/
@@ -21,7 +25,29 @@ build/
 # OS
 .DS_Store
 Thumbs.db
+desktop.ini
 
 # Misc
 *.tsbuildinfo
 .cache/
+.vercel/
+.netlify/
+
+# Python (if document-service is included)
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+.venv/
+venv/
+ENV/
+env/
+*.egg-info/
+.pytest_cache/
+
+# Sensitive files
+*.pem
+*.key
+*.cert
+*.p12
