--- a/netlify.toml
+++ b/netlify.toml
@@ -1,12 +1,6 @@
-[[headers]]
-  for = "/assets/*"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
-
-[[headers]]
-  for = "/*.woff2"
-  [headers.values]
-    Cache-Control = "public, max-age=31536000, immutable"
+[build]
+  command = "npm run build"
+  publish = "dist"
 
 [[redirects]]
   from = "/*"
