🔒 Security: Remove leaked API keys and strengthen .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,12 @@ backend/node_modules/
 .env
 .env.local
 .env.production
+.env.development
 backend/.env
+document-service/.env
+**/.env
+**/.env.local
+**/.env.production
 
 # Build outputs
 dist/
